formatting and clean-up